--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                 </div>            
             </div>
             <div class="block_right">
-               <img src="src/kosmonautas.png" alt="404">
-               
-                <!--<div class="right_wrap"> </div>-->
+                <div class="right_wrap"></div>
             </div>
         </div>
     </div>
