--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="left_wrap">
                     <h1>OOPS!</h1>
                     <p> YOU LOST IN SPACE</p>
-                    <button> go home</button> 
+                    <button> go home!</button> 
 
                 </div>            
             </div>
